# snacks

./: LICENSE  snacks.cabal  stack.yaml
app/: Main.hs  Snacks.hs
app/Snacks/: Event.hs  Game.hs  Logging.hs  Types.hs  UI.hs  World.hs
