name:                snacks
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/npj/snacks#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Brindisi
maintainer:          peter.brindisi@gmail.com
copyright:           2016 Peter Brindisi
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable snacks
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , random
                     , time
                     , hscurses
  default-language:    Haskell2010
  other-modules:       Snacks
                     , Snacks.Event
                     , Snacks.Game
                     , Snacks.UI
                     , Snacks.World
                     , Snacks.Types
                     , Snacks.Logging

test-suite snacks-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snacks
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/npj/snacks
